fix design collapse

--- a/app/static_src/less/homepage/style.less
+++ b/app/static_src/less/homepage/style.less
@@ -1,7 +1,6 @@
 @import "../variables/all";
 
 
-
 /* ======= Base ======= */
 
 body {
@@ -2433,6 +2432,12 @@ body {
 
 /* ======= New LP Design 2019/10 ======= */
 // TODO: delete unnecessary past class ↑
+ul, li{
+  list-style-type : none;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
 
 /*オプションclass*/
 .spbr{
